argo/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: default-address-pool
    gethomepage.dev/enabled: "true"
    homepage.description: "External blog"
    homepage.href: "https://10.0.0.22"
  labels:
    homepage.name: "Homepage"
    homepage.group: "Applications"
    homepage.icon: "gethomepage.png"
    homepage.weight: "2"
  #  app.kubernetes.io/name: homepage
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.22
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
