argo/apps/homepage/ingress.yaml
# apps/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.smeyer.ca`)
      kind: Rule
      services:
        - name: homepage
          port: 80
  tls:
    certResolver: letsencrypt
